--- a/css/media.css
+++ b/css/media.css
@@ -76,14 +76,14 @@
 	height: 800px;
 }
 .form > .pages {
-	background-image: url(../img/laptop3.png)
+	background-image: url(../img/laptop3.png);
 	background-size: cover;
 	height: 800px;
 }
 .information {
-	position: absolute;
-	margin-top: 270px;
-	padding-left: 250px;
+    position: absolute;
+    margin-top: 240px;
+    padding-left: 250px;
 }
 .information h1 {
 	font-size: 25px;
